# ray-tracer

./: .clang-format  CMakeLists.txt  LICENSE  Makefile  README.md  image.ppm  multithread_timings
.github/workflows/: CMake.yml  main.yml
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  triangle.h  utility.h  vec3.h
src/: main.cpp
